opt：反射工具优化